--- a/html/index.html
+++ b/html/index.html
@@ -405,8 +405,8 @@
                 <div class="form_box_wrapper">
                     <div class="form_box">
                         <ul>
-                            <li><i class="fa-regular fa-envelope"></i>service@ks-design.com</li>
-                            <li><i class="fa-regular fa-phone"></i>+886 827716606</li>
+                            <li><i class="fa-regular fa-envelope"></i><a href="mailto:service@ks-design.com">service@ks-design.com</a></li>
+                            <li><i class="fa-regular fa-phone"></i><a href="tel:+886 827716606">+886 827716606</a></li>
                             <li><i class="fa-regular fa-fax"></i>+886 827716608</li>
                             <li><i class="fa-regular fa-location-dot"></i>105台北市松山區南京東路三段346號4樓</li>
                             <div class="line"></div>
@@ -458,6 +458,7 @@
                 spaceBetween: 60,
                 centeredSlides: true,
                 allowTouchMove: true,
+                initialSlide: 1,
                 breakpoints: {
                     0: {
                         allowTouchMove: true,
