列表頁完成

--- a/html/_part.html
+++ b/html/_part.html
@@ -50,8 +50,7 @@
 <body>
     <h1 class="visuallyhidden">THAIWAN</h1>
     <!-------------------- wrapper START -------------------->
-    <!-- 首頁wrapper class="wrapper index" -->
-    <!-- 首頁wrapper class="wrapper pg" -->
+ 
     <div class="wrapper pg">
         
         <!-- header -->
@@ -74,13 +73,13 @@
                             <a href="./about.html">我們的服務</a>
                         </li>
                         <li class="nav_item">
-                            <a href="./process.html">最新消息</a>
+                            <a href="./news_list.html">最新消息</a>
                         </li>
                         <li class="nav_item">
-                            <a href="./services_list.html">產品</a>
+                            <a href="./product_list.html">產品</a>
                         </li>
                         <li class="nav_item">
-                            <a href="javascript:void(0)">品牌</a>
+                            <a href="./brand_list.html">品牌</a>
                         </li>
                         <li class="nav_item search">
                             <div class="input_wrapper">
@@ -202,6 +201,19 @@
                     預設按鈕樣式
                 </a>
             </div>
+
+            <!-- 頁碼 -->
+            <h4 class="pt_name">頁碼</h4>
+            <ul class="pgs_list">
+                <li><a href=""><img src="img/icon/angle_left.png" alt=""></a></li>
+                <li><a href="" title="1">1</a></li>
+                <li><a href="" title="2">2</a></li>
+                <li class="current"><a href="" title="3">3</a></li>
+                <li><a href="" title="4">4</a></li>
+                ...
+                <li><a href="" title="11">11</a></li>
+                <li><a href=""><img src="img/icon/angle_right.png" alt=""></a></li>
+            </ul>
         </main>
 
         <!-- footer -->
