--- a/html/_layout.html
+++ b/html/_layout.html
@@ -35,8 +35,7 @@
 <body>
     <h1 class="visuallyhidden">精承永續企業顧問</h1>
     <!-------------------- wrapper START -------------------->
-    <!-- 首頁wrapper class="wrapper index" -->
-    <!-- 首頁wrapper class="wrapper pg" -->
+ 
     <div class="wrapper pg">
         
         <!-- header -->
@@ -59,13 +58,13 @@
                             <a href="./about.html">我們的服務</a>
                         </li>
                         <li class="nav_item">
-                            <a href="./process.html">最新消息</a>
+                            <a href="./news_list.html">最新消息</a>
                         </li>
                         <li class="nav_item">
-                            <a href="./services_list.html">產品</a>
+                            <a href="./product_list.html">產品</a>
                         </li>
                         <li class="nav_item">
-                            <a href="javascript:void(0)">品牌</a>
+                            <a href="./brand_list.html">品牌</a>
                         </li>
                         <li class="nav_item search">
                             <div class="input_wrapper">
