--- a/html/index.html
+++ b/html/index.html
@@ -24,6 +24,8 @@
     <link rel="icon" type="image/x-icon" href="img/static/logo/favicon.ico" />
     <!-- swiper -->
     <link rel="stylesheet" type="text/css" href="libs/swiper/swiper-bundle.min.css" />
+    <!-- aos -->
+    <link rel="stylesheet" type="text/css" href="libs/aos/aos.css" />
     <!-- style.css -->
     <link rel="stylesheet" type="text/css" media="all" href="css/style.css" />
     <!-- fontawesome -->
@@ -33,8 +35,7 @@
 <body>
     <h1 class="visuallyhidden">THAIWAN</h1>
     <!-------------------- wrapper START -------------------->
-    <!-- 首頁wrapper class="wrapper index" -->
-    <!-- 首頁wrapper class="wrapper pg" -->
+ 
     <div class="wrapper index">
         
         <!-- header -->
@@ -57,13 +58,13 @@
                             <a href="./about.html">我們的服務</a>
                         </li>
                         <li class="nav_item">
-                            <a href="./process.html">最新消息</a>
+                            <a href="./news_list.html">最新消息</a>
                         </li>
                         <li class="nav_item">
-                            <a href="./services_list.html">產品</a>
+                            <a href="./product_list.html">產品</a>
                         </li>
                         <li class="nav_item">
-                            <a href="javascript:void(0)">品牌</a>
+                            <a href="./brand_list.html">品牌</a>
                         </li>
                         <li class="nav_item search">
                             <div class="input_wrapper">
@@ -445,12 +446,17 @@
     <script src="libs/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- swiper -->
     <script src="libs/swiper/swiper-bundle.min.js"></script>
+    <!-- aos -->
+    <script src="libs/aos/aos.js"></script>
     <!-- 共用js -->
     <script src="js/common.js"></script>
     <!-- 首頁js -->
     <script src="js/index.js"></script>
 
     <script>
+        $(function() {
+            AOS.init();
+        })
         // 我們的服務 SLIDER
         $(function() {
             var servicSwiper = new Swiper(".serviceSwiper", {
@@ -516,6 +522,7 @@
             var productTextSwiper = new Swiper(".productTextSwiper", {
                 slidesPerView: 1,
                 allowTouchMove: false,
+                loop: true,
                 effect: "fade",
                 fadeEffect: { crossFade: true },
             });
