news_detail complete

--- a/html/_custom_editor.html
+++ b/html/_custom_editor.html
@@ -18,6 +18,9 @@
     <link rel="icon" type="image/x-icon" href="img/static/logo/favicon.ico" />
     <!-- fontawesome -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <!-- ckeditor -->
+    <link rel="stylesheet" type="text/css" media="all" href="css/page.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="css/page-web.css" />
     <!-- style -->
     <link rel="stylesheet" type="text/css" media="all" href="css/style.css" />
 </head>
