--- a/html/news_list.html
+++ b/html/news_list.html
@@ -22,10 +22,14 @@
     <!-- favicon -->
     <!-- <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png"> -->
     <link rel="icon" type="image/x-icon" href="img/static/logo/favicon.ico" />
-    <!-- animate.css -->
-    <link rel="stylesheet" type="text/css" href="libs/animate/animate.min.css" />
+
     <!-- swiper -->
     <link rel="stylesheet" type="text/css" href="libs/swiper/swiper-bundle.min.css" />
+    <!-- aos -->
+    <link rel="stylesheet" type="text/css" href="libs/aos/aos.css" />
+    <!-- ckeditor -->
+    <link rel="stylesheet" type="text/css" media="all" href="css/page.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="css/page-web.css" />
     <!-- style.css -->
     <link rel="stylesheet" type="text/css" media="all" href="css/style.css" />
     <!-- fontawesome -->
