--- a/html/index.html
+++ b/html/index.html
@@ -109,7 +109,7 @@
                                     <div class="img_box">
                                         <div class="holder"></div>
                                         <picture>
-                                            <source media="(min-width: 768px)" srcset="https://fakeimg.pl/1400x1200/">
+                                            <source media="(min-width: 768px)" srcset="https://fakeimg.pl/2000/">
                                             <img src="https://fakeimg.pl/400x800/" alt="banner">
                                         </picture>
                                     </div>
