test github page 2

--- a/html/index.html
+++ b/html/index.html
@@ -109,7 +109,7 @@
                                     <div class="img_box">
                                         <div class="holder"></div>
                                         <picture>
-                                            <source media="(min-width: 768px)" srcset="https://fakeimg.pl/1500/">
+                                            <source media="(min-width: 768px)" srcset="https://fakeimg.pl/1920x1080/">
                                             <img src="https://fakeimg.pl/400x800/" alt="banner">
                                         </picture>
                                     </div>
